# SmartDisplay

./: README.md
discord-to-dynamo/: Cargo.toml  README.md
discord-to-dynamo/src/: main.rs
dynamodb-to-mqtt/: .gitignore  Cargo.toml  README.md  debug_event.json
dynamodb-to-mqtt/src/: main.rs
rmqtt/: .gitignore  Cargo.toml  README.md  diagram.json  wokwi.toml
rmqtt/src/: main.rs
scripts/: create_command.py
