[package]
name = "smart_display_discord_interaction"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = "1"
serde_json = "1.0"
ed25519-dalek = "1"
hex = "0.4.3"
aws-config = "0.55.3"
aws-sdk-iot = "0.28.0"
aws-sdk-dynamodb = "0.28.0"
uuid = {version="1.3.3", features=["fast-rng", "v4"]}
chrono = "0.4.26"